modules/security_groups/main.tf
resource "aws_security_group" "bastion_sg" {
  name        = "employee_app_bastion_sg"
  description = "Allow SSH to bastion host"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip_cidr]
    description = "Allow SSH from specific IP"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "employee_app_bastion_sg"
  }
}

resource "aws_security_group" "alb_sg" {
  name        = "employee_app_alb_sg"
  description = "Allow HTTP/HTTPS to ALB"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTP access"
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTPS access"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "employee_app_alb_sg"
  }
}

resource "aws_security_group" "ecs_fargate_sg" {
  name        = "employee_app_ecs_fargate_sg"
  description = "Allow traffic from ALB to Fargate tasks, and outbound to RDS and internet"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 8000
    to_port         = 8000
    protocol        = "tcp"
    security_groups = [var.alb_sg_id]
    description     = "Allow app traffic from ALB"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "employee_app_ecs_fargate_sg"
  }
}

resource "aws_security_group" "rds_sg" {
  name        = "employee_app_rds_sg"
  description = "Allow RDS PostgreSQL traffic only from ECS Fargate tasks and DB Init Task"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs_fargate_sg.id]
    description     = "Allow PostgreSQL access from ECS Fargate tasks"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "employee_app_rds_sg"
  }
}
